--- a/setup.cfg
+++ b/setup.cfg
@@ -3,15 +3,16 @@ name = cf_purge
 version = attr: cf_purge.__version__
 author = Anthony Monthe (ZuluPro)
 author-email = anthony.monthe@gmail.com
-url = https://github.com/ZuluPro/cf-purge
+url = https://github.com/ZuluPro/cloudfront-purge
 project_urls =
-summary = attr: cf_purge.__doc__
+summary = Simple command line tool for purge/invalidate your CloudFront's cache
 description-file = file: README.rst
 description-content-type = text/x-rst; charset=UTF-8
 requires-python = >=3.4
 
 requires-dist =
     setuptools
+    boto3
 
 classifier =
     Development Status :: 4 - Beta
